[package]
name = "server"
version = "0.1.0"
authors = ["kaga <zhanghailin1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"
rand = "0"
